Add footer and CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button type="button">Sign in</button>
         </nav>
     </header>
+
     <main>
         <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
             alt="Google Logo">
@@ -43,6 +44,20 @@
             </div>
         </form>
     </main>
+
+    <footer>
+        <nav id="footer-left">
+            <a href="">Advertising</a>
+            <a href="">Business</a>
+            <a href="">How Search works</a>
+        </nav>
+
+        <nav id="footer-right">
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <a href="">Settings</a>
+        </nav>
+    </footer>
 </body>
 
 </html>
